Make fix for checkbox spacing Windows specific.

--- a/generatorconfig/css/configBase.css
+++ b/generatorconfig/css/configBase.css
@@ -41,10 +41,6 @@ option {            /* So text in popups is readable */
     color: black;
 }
 
-.checkboxwrap {
-    margin-bottom: 3px;
-}
-
 .infolink {
     font-size: 8pt;
     cursor: pointer;
